# verilator-hello-world

./: .gitignore  CMakeLists.txt  Makefile  README.md  nixpkgs.json  shell.nix  update-nixpkgs.sh
src/: d_ff.v  full_adder.v
test/: sim_main.cpp
